turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:84: error: not found: value init
		init();
                ^